exports[`ItemTitle should render button title 1`] = `
<div
  className={undefined}>
  <button
    className="my-title btn btn-link"
    disabled={false}
    id="title"
    onClick={[Function]}
    role="link"
    type="button">
    Hello world
  </button>
</div>
`;

exports[`ItemTitle should render icon 1`] = `
<div
  className={undefined}>
  <i
    aria-hidden="true"
    className="fa fa-file-excel-o tc-list-icon"
    title={null} />
  <span
    className="my-title"
    id={undefined}>
    Hello world
  </span>
</div>
`;

exports[`ItemTitle should render input title 1`] = `
<div
  className={undefined}>
  <input
    autoFocus={true}
    id="title"
    onBlur={[Function]}
    onKeyUp={[Function]} />
</div>
`;

exports[`ItemTitle should render text title 1`] = `
<div
  className={undefined}>
  <span
    className="my-title"
    id="title">
    Hello world
  </span>
</div>
`;
